r102 - september, 12, 2009
    * update : new template 'performError.php'
    * PiwamDataPeer : new retrieveByKey($key) method
    * PiwamDataPeer : fixes bug in set() method
    * install : actions > methods _executeSQLFile and _checkMySQLConnection have
      been replaced by the DbTools call


r101 - september, 12, 2009
    * updates/1.1beta2-to-1.1/r100.sql : fixes syntax error


r100 - september, 12, 2009
    * install : config/cache.yml > new file disabling the cache for this module
    * update : new module
    * update : index > check existing SQL files to execute
    * /lib/misc/DbTools.class.php : new class
    * main.css : custom a:Visited color has been removed
    * updates/1.1.0beta2-to-1.1 : r100.sql > new credential entries (edit and
      update Piwam)
    * /doc/piwam-install.sql is up date
    * update : security.yml > new file


r99 - september, 11, 2009
    * schema.yml : new PiwamData private table
    * schema.yml : CASCADE deletion for config_ and acl_ tables
    * symfony propel-build-all
    * Configurator.class.php : get > if the variable has not been set in the
      database, the default value is returned if it has been given as parameter
    * error.html.php : error page has been customized


r98 - september, 11, 2009
    * /web/favicon.ico : new favicon file
    * layout.php : reference to favicon.ico has been updated
    * membre : templates > index > legend to show the meaning of "red"
      background
    * /apps/front/config/factories.yml : logger class has been set up
    * /apps/front/config/settings.yml : logging is enabled for prod env
    

r97 - september, 11, 2009
    * cotisation : _form.php > fixes bug #22 (AJAX behaviour when installation
      without virtualhost)
    

r96 - september, 11, 2009
    * /web/index.php : exception message if error occured
    * /apps/front/config/error/error.html.php : new file. Custom exception page
    * cotisationtype : actions > edit > fixed bug > test if we are allowed to